gcc/testsuite/rust/rustc/ui/error-codes/E0075.rs
#![feature(repr_simd)]

#[repr(simd)]
struct Bad; // { dg-error ".E0075." "" { target *-*-* } }

fn main() {
}

